3단계 - 사다리(게임 실행)