@@ -1,6 +1,5 @@
 package nextstep.ladder.domain;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -14,17 +13,19 @@ class LadderTest {
 
     @Test
     void ladder의_모든_legs는_height가_같아야_한다() {
-        Leg test1 = new Leg("test1", 5);
-        Leg test2 = new Leg("test2", 4);
+        Leg leg1 = new LegBuilder().height(5).build();
+        Leg leg2 = new LegBuilder().height(4).build();
 
-        IllegalArgumentException e = catchIllegalArgumentException(() -> new Ladder(Arrays.asList(test1, test2)));
+        IllegalArgumentException e = catchIllegalArgumentException(() -> new Ladder(List.of(leg1, leg2)));
 
         assertThat(e).hasMessage("사다리의 모든 다리는 같은 높이를 가져야 합니다.");
     }
 
     @Test
     void ladder의_모든_legs는_name이_달라야_한다() {
-        List<Leg> legs = Leg.createLegs(Arrays.asList("test1", "test1"), 5);
+        List<String> names = List.of("t1", "t1");
+        List<String> results = List.of("1", "2");
+        List<Leg> legs = Leg.createLegs(names, results, 5);
 
         IllegalArgumentException e = catchIllegalArgumentException(() -> new Ladder(legs));
 
@@ -48,11 +49,12 @@ class LadderTest {
 
     @Test
     void applyRungs_메서드는_한번만_실행된다() {
-        List<String> names = Arrays.asList("1", "2", "3");
+        List<String> names = List.of("1", "2", "3");
+        List<String> results = List.of("1", "2", "3");
         int height = 5;
         int linkCount = (names.size() - 1) * height;
 
-        List<Leg> legs = Leg.createLegs(names, height);
+        List<Leg> legs = Leg.createLegs(names, results, height);
         Ladder ladder = new Ladder(legs);
 
         MockRungStrategy mockRungStrategy = new MockRungStrategy();
